--- a/nicksChanges/assets/css/style.css
+++ b/nicksChanges/assets/css/style.css
@@ -1,33 +1,35 @@
-/** leave alone */
+/* Default style for whole page */
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
+/*Style of the body*/
 body {
   background-color: #d9dcd6;
 }
 
-.header {
+/*Header Navigation style (start)*/
+header {
   padding: 20px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Sans", Arial,
+    sans-serif;
   background-color: #2a607c;
   color: #ffffff;
 }
 
-.header h1 {
+header h1 {
   display: inline-block;
   font-size: 48px;
 }
-/*changed from div to nav clarifying styles for renamed block */
-.header h1 nav {
+
+header h1 .seo {
   color: #d9dcd6;
-  margin: 0;
 }
-/*changed from div to nav clarifying styles for renamed block */
-.header nav {
+
+header nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -35,25 +37,28 @@ body {
   font-size: 20px;
 }
 
-.header nav ul {
+header nav ul {
   list-style-type: none;
-  align-items: center;
 }
-/*changed from div to nav clarifying styles for renamed block */
-.header div ul li {
+
+header nav ul li {
   display: inline-block;
   margin-left: 25px;
 }
+/*Header and Nav style end*/
 
+/*link styles start*/
 a {
   color: #ffffff;
   text-decoration: none;
 }
 
+/*paragraph style*/
 p {
   font-size: 16px;
 }
 
+/*hero style*/
 .hero {
   height: 800px;
   width: 100%;
@@ -61,9 +66,9 @@ p {
   background-image: url("../images/digital-marketing-meeting.jpg");
   background-size: cover;
   background-position: center;
-  display: flex;
 }
 
+/*float class styles*/
 .float-left {
   float: left;
   margin-right: 25px;
@@ -73,13 +78,36 @@ p {
   float: right;
   margin-left: 25px;
 }
+/*end of float class styles*/
 
+/*content style*/
 .content {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
 
+/*Services style start*/
+.services {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+}
+
+.services img {
+  max-height: 200px;
+}
+
+.services h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+/*end of services style*/
+
+/*benefits style start*/
 .benefits {
   margin-right: 20px;
   padding: 20px;
@@ -91,116 +119,32 @@ p {
   background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefits div {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-cost {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefits h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
+/*end of benefits style*/
 
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-cost img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.search-engine-optimization {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.social-media-marketing {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.search-engine-optimization img {
-  max-height: 200px;
-}
-
-.online-reputation-management img {
-  max-height: 200px;
-}
-
-.social-media-marketing img {
-  max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.social-media-marketing h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
+/*footer style start*/
 .footer {
   padding: 30px;
   clear: both;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  text-align: center;
 }
 
 .footer h2 {
   font-size: 20px;
 }
+/*end of footer style*/
